PR 56829: Fix "map" call to Open Firmware and no longer mess up OFW stack. This unbreaks miniroot.fs.

Thanks to Björn Johannesson for originally pointing this out and to
mrg@ for pointing out the actual issue and suggesting a fix.